Point instead of String and I fixed the MQTT specific topic