@@ -2,11 +2,15 @@ package org;
 
 import org.eclipse.paho.client.mqttv3.*;
 
+import java.awt.*;
 import java.util.Arrays;
 import java.util.List;
 
 public class MQTTSubscriber implements MqttCallback {
-
+    private Point decodePoint(String s) {
+        String[] parts = s.split(",");
+        return new Point(Integer.parseInt(parts[0]), Integer.parseInt(parts[1]));
+    }
 
     @Override
     public void messageArrived(String topic, MqttMessage mqttMessage) {
@@ -15,23 +19,24 @@ public class MQTTSubscriber implements MqttCallback {
 
         String[] parts = payload.split(":");
 
-        if (parts.length == 2 && parts[0].equals("GUESS")) {
-            String coord = parts[1];
-            Blackboard.getInstance().checkOppGuess(coord);
-        }
+        if (!topic.contains(Blackboard.getInstance().getMyPlayer())) { // TO ENSURE I AM NOT READING MY OWN MSGS
+            if (parts.length == 2 && parts[0].equals("GUESS")) {
+                Point coord = decodePoint(parts[1]);
+                Blackboard.getInstance().checkOppGuess(coord);
+            } else if (parts[0].equals("RESULT")) {
+                MoveResult result = MoveResult.valueOf(parts[1]);
 
-        else if (parts[0].equals("RESULT")) {
-            MoveResult result = MoveResult.valueOf(parts[1]);
-            String coord = parts[2];
-
-            if (result == MoveResult.SUNK && parts.length == 4) {
-                String[] shipCoords = parts[3].split(",");
-                Blackboard.getInstance().addMyGuessResult(result, coord, Arrays.asList(shipCoords));
-            } else {
-                Blackboard.getInstance().addMyGuessResult(result, coord, List.of());
+                if (result == MoveResult.SUNK && parts.length == 4) {
+                    String[] shipCoordStrings = parts[3].split(";");
+                    List<Point> pts = Arrays.stream(shipCoordStrings)
+                            .map(this::decodePoint)
+                            .toList();
+                    Blackboard.getInstance().addMyGuessResult(result, decodePoint(parts[2]), pts);
+                } else {
+                    Blackboard.getInstance().addMyGuessResult(result, decodePoint(parts[2]), List.of());
+                }
             }
         }
-
     }
 
 
